Fix 12152: Add upload-error style class for dark mode

--- a/src/OrchardCore.Modules/OrchardCore.Media/wwwroot/Styles/media.css
+++ b/src/OrchardCore.Modules/OrchardCore.Media/wwwroot/Styles/media.css
@@ -971,6 +971,12 @@
   background-color: #fff3cd;
   border-color: #856404;
 }
+:root[data-theme=default] .upload-danger {
+    color: #b4124f;
+}
+[dir]:root[data-theme=default] .upload-danger {
+    background-color: #fad1dc;
+}
 [dir]:root[data-theme=darkmode] .upload-list {
   margin-bottom: 8px;
 }
